--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -1,6 +1,6 @@
 # recipes/recipe.yml
 name: flow-os-salix
-description: FlowOS 1.0 Salix - Puristisches Tablet-Erlebnis für Surface Go.
+description: FlowOS 1.0 Salix - Puristisches Tablet-Erlebnis
 base-image: ghcr.io/ublue-os/silverblue-main:41
 
 settings:
