--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,42 +1,34 @@
-name: bluebuild
+name: build-flow-os
 on:
-  schedule:
-    - cron:
-        "00 06 * * *" # build at 06:00 UTC every day
-        # (20 minutes after last ublue images start building)
-  push:
-    paths-ignore: # don't rebuild if only documentation has changed
-      - "**.md"
-
   pull_request:
-  workflow_dispatch: # allow manually triggering builds
-concurrency:
-  # only run one build at a time
-  group: ${{ github.workflow }}-${{ github.ref || github.run_id }}
-  cancel-in-progress: true
+  push:
+    branches:
+      - main
+  schedule:
+    - cron: '0 0 * * TUE'
+  workflow_dispatch:
+
 jobs:
-  bluebuild:
-    name: Build Custom Image
+  build:
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
       id-token: write
     strategy:
-      fail-fast: false # stop GH from cancelling all matrix builds if one fails
+      fail-fast: false
       matrix:
         recipe:
-          # !! Add your recipes here
           - recipe.yml
     steps:
-      # the build is fully handled by the reusable github action
+      - name: Checkout repo
+        uses: actions/checkout@v4
+
       - name: Build Custom Image
         uses: blue-build/github-action@v1.10
         with:
-        recipe: ${{ matrix.recipe }}
-        cosign_private_key: ""
-        registry_token: ${{ github.token }}
-        pr_event_number: ${{ github.event.number }}
-
-          # enabled by default, disable if your image is small and you want faster builds
+          recipe: ${{ matrix.recipe }}
+          cosign_private_key: "" # Leer lassen für keine Signierung
+          registry_token: ${{ github.token }}
+          pr_event_number: ${{ github.event.number }}
           maximize_build_space: true
