--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,15 +11,30 @@ jobs:
     permissions:
       contents: read
       packages: write
-      id-token: write
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Build Image mit Podman
-        run: |
-          # Wir bauen das Image direkt mit den Standard-Tools von GitHub
-          # Wir nutzen das Basis-Image von BlueBuild, aber führen den Befehl selbst aus
-          docker run --rm -v $(pwd):/build \
-          ghcr.io/blue-build/cli:latest \
-          blue-build build /build/recipes/recipe.yml --no-sign
+      - name: Build Salix Image
+        id: build
+        uses: redhat-actions/buildah-build@v2
+        with:
+          image: flow-os
+          tags: latest v1.0
+          # Wir nutzen direkt das Fedora Kinoite Image als Basis
+          base-image: quay.io/fedora-ostree-desktops/kinoite:41
+          containerfiles: |
+            FROM quay.io/fedora-ostree-desktops/kinoite:41
+            # Hier installieren wir die Surface-Spezial-Sachen direkt
+            RUN rpm-ostree contact-setup-surface && \
+                rpm-ostree install kernel-surface surface-control && \
+                rpm-ostree cleanup -a
+
+      - name: Push to GitHub Packages
+        uses: redhat-actions/push-to-registry@v2
+        with:
+          image: ${{ steps.build.outputs.image }}
+          tags: ${{ steps.build.outputs.tags }}
+          registry: ghcr.io/${{ github.repository_owner }}
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
